sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:5: error: illegal start of statement
    else if (plusPetit(position+1,position+2)) {position+=1}
    ^