sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var position:Int=0
  while(position!=9) {
    else if (plusPetit(position+1,position+2)) {position+=1}
    else {echange(position+2,position+1)
          position-=1}}
}